# Yamamiya_3PM_pjk

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  prepare_sample.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
Specification/: README.md  design_note.md  main_inst.md
diagrams/electric/components/: 2A-00002.00.00-solenoid_driver.md  2A-00003.00.00-motor_driver.md  2A-00004.00.00-power-box.md  (+1 more)
diagrams/ros_design/: detector.drawio  train.drawio
ml_components/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  labels.yaml  main.py  poetry-requirements.txt  pyproject.toml  pyproject_poetry.toml
ml_components/.devcontainer/: devcontainer.json  docker-compose.yml
ml_components/docker/poetry/: Dockerfile
ml_components/docker/rye/: Dockerfile
ml_components/ml_components/components/dataloader/: __init__.py  binary_classifier_dataloader_factory.py
ml_components/ml_components/components/dataset_loader/: __init__.py  custom_dataset_loader.py  kaggle_dataset_loader.py  template_dataset_loader.py
ml_components/ml_components/components/factory/: __init__.py  io_module_factory.py  template_factory.py
ml_components/ml_components/components/inference/: __init__.py  inference_context.py  template_predictor.py  umap_reducing_predictor.py  vgg_like_classifier_predictor.py  vgg_like_feature_extractor.py  vgg_like_umap_predictor.py
ml_components/ml_components/components/operators/: __init__.py  parameters_loader.py
ml_components/ml_components/data_structures/: __init__.py  accuracy_meas_parameters.py  classifier_dataloader_dataclass.py  dataset_loader_parameters.py  prediction_parameters.py  train_parameters.py
ml_components/ml_components/io/: __init__.py  config_s3.py  io_template.py  onnx_s3.py  pickle_s3.py  save_image_s3.py  transfer_s3.py
ml_components/ml_components/models/factory/: __init__.py  model_factory_template.py  vgg_like_classifier_factory.py
ml_components/ml_components/pipelines/: __init__.py  accuracy_meas_pipeline.py  inference_pipeline.py  template_pipeline.py  train_pipeline.py
ml_components/ml_components/train/: __init__.py  template_trainer.py  vgg_like_classifier_trainer.py  vgg_like_umap_classifier_trainer.py
ml_components/test/: conftest.py
ml_components/test/components/dataloader/: test_binary_classifier_dataloader_factory.py  test_kaggle_dataset_loader.py
ml_components/test/components/dataset_loader/: test_custom_dataset_loader.py
ml_components/test/components/factory/: test_io_module_factory.py
ml_components/test/components/inference/: test_inference_context.py  test_umap_reducing_predictor.py  test_vgg_like_classifier_predictor.py  test_vgg_like_feature_extractor.py  test_vgg_like_umap_predictor.py
ml_components/test/components/operators/: test_parameters_loader.py
ml_components/test/data_structures/: test_classifier_dataloader_dataclass.py  test_dataset_loader_parameters.py
ml_components/test/io/: test_onnx_s3.py  test_pickle_s3.py
ml_components/test/models/factory/: test_vgg_like_classifier_factory.py
ml_components/test/pipelines/: test_accuracy_meas_pipeline.py  test_inference_pipeline.py  test_train_pipeline.py
ml_components/test/train/: test_binary_classification_kaggle_dog_cat.py  test_supervised_umap.py  test_umap_fit_transform.py  test_vgg_like_umap_classifier_trainer.py
ros2_components/: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
ros2_components/.devcontainer/: devcontainer.json  docker-compose.yml
ros2_components/config/: hoge.yaml
scripts/: configure_streming.sh  install_aws_cli.sh
scripts/minio/: configure_minio.sh  synchronize_minio.sh
terraform/terraform-gcp/: main.tf  terraform.tfstate  terraform.tfstate.backup
(+83 files in other folders)
