[tool.poetry]
name = "yamamiya_pm"
version = "0.0.0"
description = ""
authors = ["SAKAIRI Nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]
readme = "README.md"
packages = [{include = "yamamiya_pm"}]

[tool.poetry.dependencies]
python = "^3.10"
rocker = "^0.2.10"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
isort = "^5.11.4"
black = "^22.12.0"
opencv-python = "^4.7.0.72"
boto3 = "^1.26.109"
numpy = "^1.24.2"
torch = "^2.0.0"
torch-vision = "^0.1.6.dev0"
scikit-optimize = "^0.9.0"
typer = "^0.7.0"

[tool.setuptools]
package-dir = {"" = "ros2_ws/src"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = '''
(
     \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | db
 )
 '''

[tool.isort]
profile = "black"
line_length = 90
skip_glob = ""