[project]
name = "ml-components"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "opencv-python>=4.10.0.84",
    "numpy>=2.0.0",
    "typer>=0.12.3",
    "black>=24.4.2",
    "isort>=5.13.2",
    "pytest>=8.2.2",
    "boto3>=1.34.137",
    "tqdm>=4.66.4",
    "pydantic>=2.8.0",
    "scikit-learn>=1.5.0",
    "torch>=2.3.1",
    "torch-vision>=0.1.6.dev0",
    "pyyaml>=6.0.1",
    "pillow>=10.4.0",
    "umap-learn>=0.5.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ml_components"]


[tool.black]
line-length = 90
exclude = '''
(
     \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | db
 )
 '''

[tool.isort]
profile = "black"
line_length = 90
skip_glob = "*/migrations/*.py,*/__init__.py"
